[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/Characters/NoteEnemy.gd" type="Script" id=1]
[ext_resource path="res://start-assets/enemy2.png" type="Texture" id=2]

[node name="NoteEnemy" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 9
script = ExtResource( 1 )
speed = null
gravity = null
score = null
bullet_speed = null
fire_rate = null
health = null
damage = null

[node name="enemy" type="Sprite" parent="."]
position = Vector2( 2, -2 )
texture = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( 2, -2 )
polygon = PoolVector2Array( 59, -91.9, 59, -88, 58, -88, 58, -25, 18, -25, 18, -21, 17, -21, 17, 93.2, 18.4, 94.5, 17.3, 97, 15, 97, -58, 98, -58, 9, -17, 9, -17, -94.1 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( 18, -11 )
scale = Vector2( 0.77, 1.33333 )
rect = Rect2( -50, -61, 100, 60 )
process_parent = true
physics_process_parent = true

[node name="Stomp" type="Area2D" parent="."]
modulate = Color( 0.65098, 0.0509804, 0.92549, 1 )
position = Vector2( 0, -61 )
collision_layer = 2
priority = 1.0

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Stomp"]
position = Vector2( 2, 59 )
polygon = PoolVector2Array( 59, -91.9, 59, -88, 58, -88, 58, -25, 18, -25, 18, -21, 17, -21, 17, 93.2, 18.4, 94.5, 17.3, 97, 15, 97, -58, 98, -58, 9, -17, 9, -17, -94.1 )

[node name="ShootTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="body_entered" from="Stomp" to="." method="_on_Stomp_body_entered"]
